# flare-FL

./: .gitignore  README.md  demo.py  flask_server.py  hardhat.config.ts  package-lock.json  requirements.txt
contracts/: FederatedLearning.sol  FlareFL.sol
docs/: development-notes.md
scripts/: FDCExample.ts  FDCExampleFL.ts  (+3 more)
src/client_module/: README.md  pyproject.toml
src/client_module/model_update_and_validation_api_client/: __init__.py
src/client_module/model_update_and_validation_api_client/api/default/: get_get_local_update.py  get_global_model.py  get_validate.py  post_update_model.py  post_update_model_from_file.py
src/client_module/model_update_and_validation_api_client/models/: __init__.py  get_global_model_response_400.py  get_global_model_response_404.py  get_validate_response_200.py  get_validate_response_400.py  get_validate_response_409.py  post_update_model_body.py  post_update_model_body_model_id.py  post_update_model_from_file_body.py  post_update_model_from_file_body_model_id.py  post_update_model_from_file_response_200.py  post_update_model_from_file_response_400.py  post_update_model_response_200.py  post_update_model_response_400.py
src/client_module/model_validation_api_client/: __init__.py
src/client_module/model_validation_api_client/api/default/: get_validate_model.py  post_validate_model.py
src/client_module/model_validation_api_client/models/: __init__.py  get_validate_model_model.py  get_validate_model_response_200.py  post_validate_model_body.py  post_validate_model_body_model.py  post_validate_model_response_200.py
(+35 files in other folders)
